Criado Home e Rodapé

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div id="logo">
                     Business
                 </div>
-                <nav id="menu">
+                <nav class="menu">
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="index.html">About</a></li>
@@ -42,12 +42,42 @@
         </div>
     </header>
 
-    <section>
+    <section class="home">
+
+        <main class="container">
+
+            <div class="title">
+                <h1>Home Page</h1>
+            </div>
+
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore excepturi sint id, deserunt vitae vel veritatis alias dolorum quibusdam molestiae quidem animi accusantium, suscipit quisquam obcaecati, tempora cum natus! Totam!</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus veniam at eligendi dicta neque, eum accusantium ex maxime quod repellat dolorum quis, ullam, sit fugiat quisquam necessitatibus quia iste doloribus!
+            Voluptate nostrum ducimus sint, mollitia, dignissimos facere nobis eum ipsa itaque, amet hic quae repudiandae at odio harum. Quasi temporibus itaque ipsa! Tempore error ea doloremque sit illo beatae. Modi!
+            Cum pariatur et velit labore accusamus, animi dicta voluptatibus dolore odit autem qui molestiae, natus veniam, eveniet minus ab molestias odio temporibus debitis doloribus. Aperiam temporibus possimus reprehenderit velit. Voluptate.</p>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, magnam facilis blanditiis assumenda voluptatem eaque praesentium, itaque doloribus ipsa deserunt obcaecati velit eveniet ut aspernatur reprehenderit. Minima eos modi quod?
+            Repellendus, exercitationem. Earum, animi nesciunt dignissimos iure inventore quo veniam magni deleniti nulla accusamus debitis tempora rem? Eligendi ipsa pariatur unde placeat! At autem qui eius maxime mollitia iste quis!</p>
+
+        </main>
 
     </section>
 
 
     <footer>
+
+        <div class="container">
+
+            <p>Todos os direitos reservados</p>
+
+            <nav class="menu">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
 
     </footer>
 
