Site Responsivo e controle de menu com JS

--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home Page</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
-<body> 
+<body>
+
     <header>
 
         <form action="" id="register">
 
             <p>Cadastre-se</p>
             <div class="field"><input type="text" placeholder="Digite seu nome..."></div>
-            <div class="field"><input type="e-mail" placeholder="Digite seu e-mail..."></div>
+            <div class="field"><input type="email" placeholder="Digite seu e-mail..."></div>
             <div class="field"><input type="date" placeholder="Data de nascimento..."></div>
             <div class="field">
                 <label><input type="radio" name="gender" value="M"><span>Masculino</span></label>
@@ -23,25 +25,33 @@
 
             <button>Registrar</button>
 
-
         </form>
 
         <div class="bg-gradient">
-            <div class = 'header-border'>
+
+            <div class="header-border">
+
                 <div id="logo">
                     Business
                 </div>
+
                 <nav class="menu">
+                    <button type="button" class="open-menu"><i class="fas fa-bars"></i></button>
+                    <div class="backdrop"></div>
                     <ul>
+                        <li class="close-menu"><button type="button"><i class="fas fa-times"></i></button></li>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html">About</a></li>
-                        <li><a href="index.html">Contact</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
-           </div>
-        </div>
-    </header>
 
+            </div>
+
+        </div>
+
+    </header>
+    
     <section class="home">
 
         <main class="container">
@@ -50,19 +60,17 @@
                 <h1>Home Page</h1>
             </div>
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore excepturi sint id, deserunt vitae vel veritatis alias dolorum quibusdam molestiae quidem animi accusantium, suscipit quisquam obcaecati, tempora cum natus! Totam!</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis dolor excepturi temporibus maiores, fuga id porro officiis officia cupiditate debitis quasi et magni nostrum possimus eum, tempore libero ducimus omnis!</p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus veniam at eligendi dicta neque, eum accusantium ex maxime quod repellat dolorum quis, ullam, sit fugiat quisquam necessitatibus quia iste doloribus!
-            Voluptate nostrum ducimus sint, mollitia, dignissimos facere nobis eum ipsa itaque, amet hic quae repudiandae at odio harum. Quasi temporibus itaque ipsa! Tempore error ea doloremque sit illo beatae. Modi!
-            Cum pariatur et velit labore accusamus, animi dicta voluptatibus dolore odit autem qui molestiae, natus veniam, eveniet minus ab molestias odio temporibus debitis doloribus. Aperiam temporibus possimus reprehenderit velit. Voluptate.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, facilis sapiente fugit molestias nam quo recusandae eligendi doloribus reiciendis culpa. Dolorum illum magnam fugit reprehenderit. Expedita ipsum qui odit distinctio!
+            Ullam quam laboriosam officiis obcaecati sunt molestias expedita fugiat corrupti aliquid atque ratione accusamus voluptatibus, ducimus repellendus esse consequatur nostrum aliquam, minus commodi explicabo fuga, qui asperiores? Dicta, reprehenderit ut.
+            Eaque blanditiis quo praesentium molestias, aliquid ea labore eligendi iusto aut doloribus nam quia nostrum illo vel soluta reprehenderit suscipit quasi iure alias distinctio veritatis repellendus assumenda! Sequi, temporibus assumenda.</p>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit, magnam facilis blanditiis assumenda voluptatem eaque praesentium, itaque doloribus ipsa deserunt obcaecati velit eveniet ut aspernatur reprehenderit. Minima eos modi quod?
-            Repellendus, exercitationem. Earum, animi nesciunt dignissimos iure inventore quo veniam magni deleniti nulla accusamus debitis tempora rem? Eligendi ipsa pariatur unde placeat! At autem qui eius maxime mollitia iste quis!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos id nam reprehenderit repudiandae officiis laboriosam, ipsum molestias corporis magni enim modi tempora iure blanditiis quo labore placeat at laudantium doloremque?Consequatur itaque odio ipsum soluta quas fugit quisquam, unde eum porro dolorem doloribus, nostrum expedita et adipisci vel distinctio fugiat voluptatem? Voluptatem quia aspernatur quaerat, laboriosam ratione ipsa doloremque adipisci.</p>
 
         </main>
 
     </section>
-
 
     <footer>
 
@@ -73,16 +81,15 @@
             <nav class="menu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="index.html">Contact</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+
         </div>
 
     </footer>
 
-
     <script src="assets/js/script.js"></script>
-    
 </body>
 </html>
